# manim-simplex

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  ruff.toml
.claude/skills/manimce-best-practices/examples/: 3d_visualization.py  basic_animations.py  graph_plotting.py  lorenz_attractor.py  math_visualization.py  updater_patterns.py
.claude/skills/manimce-best-practices/examples/attention/: helpers.py  scenes.py
.claude/skills/manimce-best-practices/templates/: camera_scene.py  threed_scene.py
.github/scripts/: check_github_issues.py
.github/workflows/: ci.yml  publish-pypi.yml
examples/: README.md  glyph_map_demo.py  hello_slide.py  outline_slide.py  theme_demo.py
src/simplex/: __init__.py  manifest.py  plugin.py  section.py
src/simplex/engine/: README.md  __init__.py  animations.py  code.py  debug.py  defaults.py  dynamics.py  geometry.py  ghost_fade.py  glyph_map.py  region.py  scaling.py  section_types.py  text.py  transforms.py
src/simplex/mobjects/: README.md  __init__.py  array.py  graph.py  outline.py  paper.py
src/simplex/slides/: README.md  __init__.py  base.py  chrome.py  outline.py
src/simplex/slides/components/: README.md  __init__.py  array.py  graph.py
src/simplex/theme/: README.md  __init__.py  context.py  presets.py  pygments_style.py  tokens.py  web_css.py
src/simplex/theme/styles/: __init__.py  simplex_pycharm.py  simplex_solarized_light.py
tests/: README.md  test_manifest.py  test_public_api.py  test_section.py
tests/engine/: README.md  test_animations.py  test_code.py  test_debug.py  test_dynamics.py  test_geometry.py  test_ghost_fade.py  test_glyph_map.py  test_region.py  test_scaling.py  test_text.py  test_transforms.py
tests/mobjects/: README.md  test_graph.py  test_outline.py  test_paper.py
tests/slides/: README.md  test_base.py  test_chrome.py  test_outline.py
tests/theme/: README.md  test_tokens.py  test_web_css.py
