[project]
name = "manim-simplex"
version = "0.2.0"
description = "Manim plugin: theme tokens, mobjects, slide hierarchy, deck manifest schema."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Shlomi Perles" }]
keywords = [
    "manim",
    "manim-slides",
    "animation",
    "presentation",
    "lecture",
    "education",
    "math",
    "computer-science",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Education",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Visualization",
    "Typing :: Typed",
]
dependencies = [
    "manim>=0.20.1",
    "manim-slides>=5.1.7",
    "pydantic>=2.7",
    "pygments>=2.18",
]

[project.urls]
Homepage = "https://github.com/shlomi-perles/manim-simplex"
Repository = "https://github.com/shlomi-perles/manim-simplex"
Issues = "https://github.com/shlomi-perles/manim-simplex/issues"
Changelog = "https://github.com/shlomi-perles/manim-simplex/blob/main/CHANGELOG.md"

[project.entry-points."manim.plugins"]
simplex = "simplex.plugin:activate"

[dependency-groups]
dev = [
    "pytest>=8",
    "syrupy>=4.6",
    "ruff>=0.6",
    "basedpyright>=1.13",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simplex"]

[tool.hatch.build.targets.wheel.force-include]
"src/simplex/py.typed" = "simplex/py.typed"

[tool.basedpyright]
include = ["src", "tests"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
# Manim's type stubs in 0.20.x are incomplete: VGroup(...) widens to
# `Group | Unknown`, Animation subclasses' `__init__` deliberately differs
# from the inherited `__new__`, color constants are `ManimColor` instances
# typed as `str`. Demote these categories to warnings rather than rewriting
# upstream's stubs in this plugin. Tracked for cleanup as stubs improve.
reportArgumentType = "warning"
reportReturnType = "warning"
reportAssignmentType = "warning"
reportInconsistentConstructor = "warning"
reportUnknownLambdaType = "warning"
# Tests deliberately exercise private helpers (e.g. `_resolve_section_type`,
# `_interpret_delay`) to keep the public surface small while still
# covering edge cases.
reportPrivateUsage = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
